| Bug #41962 | Maria: view-related test failures (insert, view, maria, trigger tests) | ||
|---|---|---|---|
| Submitted: | 8 Jan 2009 14:05 | Modified: | 10 Mar 2009 20:54 |
| Reporter: | Guilhem Bichot | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Maria storage engine | Severity: | S3 (Non-critical) |
| Version: | 5.1-maria | OS: | Any |
| Assigned to: | Michael Widenius | CPU Architecture: | Any |
[8 Jan 2009 14:05]
Guilhem Bichot
[9 Jan 2009 4:24]
Michael Widenius
All fixes for pushbuild pushed to Maria tree.
[17 Feb 2009 11:46]
Bugs System
Pushed into 6.0.10-alpha (revid:serg@mysql.com-20090217113558-vpsqsyjule7nz0gk) (version source revid:guilhem@mysql.com-20090213163054-rsg204z5qzcekbfe) (merge vers: 6.0.10-alpha) (pib:6)
[10 Mar 2009 20:54]
Guilhem Bichot
test failures, nothing to document
